applications/jenkins-cn-north4-ingress/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: jenkins-master-ingress
  name: jenkins-master-ingress
