applications/jenkins-cn-north4-ingress/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: jenkins-master-service
  namespace: jenkins-master-ingress
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 30080

---
kind: Endpoints
apiVersion: v1
metadata:
  name: jenkins-master-service
  namespace: jenkins-master-ingress
subsets:
  - addresses:
    - ip: 192.168.0.145
    ports:
    - port: 30080
